[tool.poetry]
name = "software-brauerei-challenges"
version = "1.0.0"
description = ""
authors = ["Marcel Kröker <kroeker.marcel@gmail.com>"]
readme = "README.md"
packages = [{include = "software_brauerei_challenges"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
